--- a/data/locales/nl/member.json
+++ b/data/locales/nl/member.json
@@ -7,7 +7,5 @@
   "phone": "Telefoonnummer",
   "hobbys": "Hobby's",
   "favcolour": "Favoriete Kleur",
-  "pet": "Huisdier(en)",
-
-  "Slapen": "Slapen"
+  "pet": "Huisdier(en)"
 }
