[Member] Add introduction video entries.

--- a/data/locales/nl/main.json
+++ b/data/locales/nl/main.json
@@ -3,5 +3,7 @@
   "Home": "Home",
   "Members": "Leden",
   "Roadmap": "Roadmap",
-  "Blog": "Blog"
+  "Blog": "Blog",
+  "en": "Engels",
+  "nl": "Nederlands"
 }
