--- a/data/locales/nl/member.json
+++ b/data/locales/nl/member.json
@@ -1,4 +1,7 @@
 {
+  "Introduction": "Introductie",
+  "Click here for an introduction.": "Klik hier voor een introductie.",
+
   "age": "Leeftijd",
   "role": "Rol",
   "education": "Opleiding",
