--- a/data/locales/nl/main.json
+++ b/data/locales/nl/main.json
@@ -1,5 +1,6 @@
 {
   "This is the home-page of Gilde DevOps Solutions.": "Dit is de home-pagina van Gilde DevOps Solutions.",
+  "Introductory Video": "Bedrijfsvideo",
   "Home": "Home",
   "Members": "Leden",
   "Roadmap": "Roadmap",
